# tc

./: .gitignore  README.md  demo.ipynb  examples.yaml  pyproject.toml
tc/: __init__.py  _ram.py  barcodes.py  cli.py  marigold.py  sam.py  tasks.py  utils.py
tc/barcodes/: __init__.py  code128_decoder.py  decode_barcodes.py  decoder_api.py  utils.py
