[project.scripts]
cli = "tc.cli:cli"

[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tc"]

[project]
name = "tc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "decord>=0.6.0",
    "einops>=0.8.1",
    "fire>=0.7.1",
    "huggingface-hub>=1.2.3",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "psutil>=7.1.3",
    "pycocotools>=2.0.11",
    "python-dotenv>=1.2.1",
    "sam3",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "setuptools>=80.9.0",
]

[tool.uv.sources]
sam3 = { git = "https://github.com/facebookresearch/sam3.git" }

[dependency-groups]
lint = [
    "ruff>=0.14.10",
]

[tool.ruff]
lint.extend-select = ["I"]
