[project.scripts]
cli = "tc.cli:cli"

[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tc"]

[project]
name = "tc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "ram",
    "sam3", "fairscale>=0.4.13,<0.5", "einops>=0.8.1,<0.9", "decord>=0.6.0,<0.7",
]

[tool.uv.sources]
sam3 = { git = "https://github.com/facebookresearch/sam3.git" }
ram = { git = "https://github.com/xinyu1205/recognize-anything.git" }

[dependency-groups]
lint = [
    "ruff>=0.14.10",
]

[tool.ruff]
lint.extend-select = ["I"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
cuda = "12.2"

[tool.pixi.pypi-dependencies]
tc = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
lint = { features = ["lint"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
transformers = ">=4.40,<4.50"
numpy = ">=1.26,<2"
scikit-learn = ">=1.8.0,<2"
huggingface_hub = ">=0.36.0,<0.37"
ruff = ">=0.14.10,<0.15"
ipykernel = ">=7.1.0,<8"
pip = ">=25.3,<26"
einops = ">=0.8.1,<0.9"
triton = ">=3.5.1,<4"
pycocotools = ">=2.0.11,<3"
zbar = ">=0.10,<0.11"
pytorch-gpu = "<2.6"
pyzbar = ">=0.1.9,<0.2"
opencv = ">=4.10.0,<5"
torchvision = ">=0.20.1,<0.21"
